[package]
name = "BluePond"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
futures-util = "0.3.32"
rcgen = "0.14.7"
rustls = "0.23.37"
rustls-pemfile = "2.2.0"
tokio = { version = "1.50.0", features = ["io-std", "io-util", "macros", "rt"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = "0.28.0"
